# M5Stack_Linux_Libs

./: .gitignore  Kconfig  README.md
assets/: README.md
bak/: can_master_main.c  linux_i2c.c  linux_i2c.h  main.c
bak/hv/: CMakeLists.txt  Kconfig
components/: components.cmake  components.py
components/Backward_cpp/: CMakeLists.txt  Kconfig  SConstruct
components/Cimg/: CMakeLists.txt  Kconfig  SConstruct
components/DeviceDriver/: CMakeLists.txt  Kconfig  SConstruct
components/LovyanGFX/: Kconfig  SConstruct
components/SOEM/: CMakeLists.txt  Kconfig  SConstruct
components/anyany/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/ax620u_support/: Kconfig  SConstruct
components/axera_support/: Kconfig  SConstruct
components/c_periphery/: CMakeLists.txt  Kconfig  SConstruct
components/cjson/: Kconfig  SConstruct
components/component1/: CMakeLists.txt  Kconfig  SConstruct
components/cppstate/: CMakeLists.txt  Kconfig  SConstruct
components/deprecated/: Kconfig
components/deprecated/m5gfx/: CMakeLists.txt  Kconfig
components/eventpp/: CMakeLists.txt  Kconfig  SConstruct
components/ffmpeg_vcode/: Kconfig  SConstruct
components/freetype_component/: Kconfig  SConscript
components/gpiod_component/: Kconfig  SConstruct
components/hv/: CMakeLists.txt  Kconfig  SConstruct
components/hv/include/hv/: hconfig.h
components/lvgl_component/: CMakeLists.txt  Kconfig  SConstruct
components/minicv2/: CMakeLists.txt  Kconfig  SConscript
components/modbus_component/: Kconfig  SConstruct
components/mongoose/: CMakeLists.txt  Kconfig  SConstruct
components/nanojpeg/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/nanolog/: CMakeLists.txt  Kconfig  SConstruct
components/nanomsg/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/nanomsg/include/nanomsg/: nn.hpp
components/ncnn/: Kconfig  SConstruct
components/nng/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/qrencode_component/: Kconfig  SConstruct
components/simdjson_component/: Kconfig  SConstruct
components/simpleini/: CMakeLists.txt  Kconfig  SConscript
components/single_header_libs/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/sqlite3_component/: Kconfig  SConstruct
components/static_package/: Kconfig  SConstruct
components/stb/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/timercpp/: CMakeLists.txt  Kconfig  SConstruct
components/tinyalsa_component/: Kconfig  SConstruct
components/tinyjpeg/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/tommath/: Kconfig  SConstruct
components/toolkit/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/u8g2_component/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/unitv2_support/: Kconfig  SConstruct
components/utilities/: CMakeLists.txt  Kconfig  SConscript  SConstruct  test.c
components/utilities/party/easymsgcpp/: CMakeLists.txt  README.md
components/utilities/party/easymsgcpp/config/: EasyMsgConfig.cmake.in
components/utilities/party/easymsgcpp/examples/: CMakeLists.txt
components/utilities/party/easymsgcpp/examples/01_msgmatch_example/: main.cxx
components/utilities/party/easymsgcpp/examples/02_msgcallback_example/: mailbox.cpp  mailbox.h  main.cxx
components/utilities/party/easymsgcpp/src/: CMakeLists.txt  easy_msg.cpp  easymsg_callback.cpp  easymsg_dispatcher.cpp  easymsg_subscriber.cpp
components/utilities/party/easymsgcpp/src/include/: easy_msg.h  easymsg_callback.h  easymsg_dispatcher.h  easymsg_export.h  easymsg_subscriber.h
components/zpl/: Kconfig  SConstruct
doc/: README.md  examples_demo1.md  heard_bus.md
doc/component_doc/: DeviceDriver.md  utilities.md
doc/example_doc/: linux_can.md  linux_i2c.md  linux_spi.md  linux_uart.md  mqtt.md  opencv.md  tcp.md
doc/tools/: linux_debug_tools.md
examples/LoRaSender/: config_defaults.mk
examples/LovyanGFX_demo/: config_defaults.mk
examples/any_test/: config_defaults.mk
examples/axp2101_read/: README.md  config_defaults.mk
examples/backward_cpp_test/: config_defaults.mk
examples/bad_apple_sh110x/: config_defaults.mk
examples/c_periphery_example/: .gitignore  config_defaults.mk
examples/camera/: README.md  config_defaults.mk
examples/chirpstack_grpc_clinet/: config_defaults.mk  readme.md
examples/cimg_test/: config_defaults.mk
examples/cjson_demo/: config_defaults.mk
examples/core135_start_ui/: config_defaults.mk
examples/coremp135_lora_demo/: README.md  config_defaults.mk
examples/coremp135_lora_demo/main/ui/: CMakeLists.txt  filelist.txt  hv_api.cpp  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_task.c  ui_task.h
examples/coremp135_lora_demo/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
examples/coremp135_lora_demo/main/ui/fonts/: ui_font_mono.c
examples/coremp135_lora_demo/main/ui/images/: ui_img_1269654739.c  ui_img_1858829983.c  ui_img_66149530.c  ui_img_cpu_load__png.c  ui_img_cpu_temp__png.c  ui_img_downlink__png.c  ui_img_ip___png.c  ui_img_lorawan_gateway_on_coremp135_png.c  ui_img_package_png.c  ui_img_ram__png.c  ui_img_rectangle_15_png.c  ui_img_uplink___png.c  ui_img_vector_1_png.c
examples/coremp135_lora_demo/main/ui/screens/: ui_Screen1.c
examples/cpu_use/: config_defaults.mk
examples/deviceriver_example/: Sconstruct  config_defaults.mk
examples/dlsym/: config_defaults.mk
examples/ethercat_examples/: config_defaults.mk
examples/ethercat_moter_examples/: config_defaults.mk
examples/eventpp_demo/: config_defaults.mk
examples/eventpp_test/: config_defaults.mk
examples/ffmpeg_vcode_demo/: config_defaults.mk
examples/firebird_demo/: README.md  config_defaults.mk
examples/framebuffer_OpenCV/: README.md  config_defaults.mk
examples/framebuffer_show_ip/: config_defaults.mk
examples/freetype_framebuffer/: config_defaults.mk
examples/grpc_demo/: config_defaults.mk  readme.md
examples/haos_lvgl_logo/: setup.ini  (+1 more)
github_source/: source-list.sh
tools/: Makefile.mk  build_test.sh  push.py  ssh.py
(+645 files in other folders)
